--- a/sass/ysu/_content.scss
+++ b/sass/ysu/_content.scss
@@ -52,6 +52,7 @@
 
 // アイキャッチ
 .post-thumbnail {
+	text-align: center;
 	line-height: 1;
 }
 
